# bioinf_project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FastaParser.cpp  IViterbi.h  LICENSE  Main.java  Makefile  MleEstimator.cpp  MleEstimator.h  README.md  Sequence.cpp  Sequence.h  Viterbi.cpp  Viterbi.h  ViterbiLogOdds.cpp  ViterbiLogOdds.h  aligner.py  bioinf  bioinf.cbp  cmake_install.cmake  dokumentacija.tex  install_manifest.txt  main.cpp  massif.out.12598  massif.out.13112  massif.out.25927  massif.out.27508  massif.out.29600  massif.out.6826
database/: HIV1_REF_2010.fasta  ebola.fasta  hepatitis.fasta  pox.fasta  rabies_virus.fasta  random_100.fasta  random_5000.fasta  salmonella.fasta  tropomyosin.fasta
database/aligned/: output_p1-aligned.fasta  output_p10-aligned.fasta  output_p100-aligned.fasta  output_p101-aligned.fasta  output_p102-aligned.fasta  output_p103-aligned.fasta  output_p104-aligned.fasta  output_p105-aligned.fasta  output_p106-aligned.fasta  output_p107-aligned.fasta  output_p108-aligned.fasta  output_p109-aligned.fasta  output_p11-aligned.fasta  output_p110-aligned.fasta  output_p111-aligned.fasta  output_p112-aligned.fasta  output_p113-aligned.fasta  (+361 more)
documentation/: dokumentacija.tex
files/: h1n1_ha.txt  sample.txt
helpers/: Gemfile  analyser.py  prepare_outputs.rb  prepare_pairs.rb
include/: FastaParser.h  IViterbi.h  MleEstimator.h  Sequence.h  Viterbi.h  ViterbiLogOdds.h  ViterbiLogOddsOptimal.h
src/: FastaParser.cpp  MleEstimator.cpp  Sequence.cpp  Viterbi.cpp  ViterbiLogOdds.cpp  ViterbiLogOddsOptimal.cpp  main.cpp
(+2853 files in other folders)
